# minimal-cuda

./: .clang-format  .gitignore  CMakeLists.txt
src/: kernel.cu  kernel.h  main.cc
